# vscode-R

./: .gitignore  .vscodeignore  AGENTS.md  CHANGELOG.md  CHANGELOG.old.md  README.md  cliff.toml  package.json  pixi.toml  pnpm-lock.yaml
.github/workflows/: main.yml  pre-release.yml  release.yml
R/session/: vsc.R
ark-sidecar/: Cargo.toml
ark-sidecar/src/: main.rs
dev-docs/: ark-session-types.md  positron-r-session.md  thinking-on-integrating-positron-r.md  vscode-ark.md
html/httpgd/: index.ts  webviewMessages.d.ts
reports/: management-of-lang-servers.md  on-broken-view.md  proposal-session-respawn-servers.md
scripts/: ark-sidecar-lsp-test.js  example-connection-file.json
src/: extension.ts  languageService.ts  session.ts
src/ark/: arkLanguageService.ts  sessionRegistry.ts
src/backends/: ark.ts  console.ts  language.ts  terminal.ts  types.ts
src/helpViewer/: helpProvider.ts
src/plotViewer/: httpgdTypes.d.ts  index.ts  webviewMessages.d.ts
src/test/suite/: index.ts
