[package]
name = "vscode-r-ark-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
runtimelib = { version = "0.30.2", features = ["tokio-runtime"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["rt", "time"] }
uuid = { version = "1.7", features = ["v4"] }
zeromq = "0.5.0-pre"
